test/main/default/objects/copado__User_Story__c/fields/Customer_Journey__c.field-meta.xml
<CustomField>
    <fullName>Customer_Journey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Journey</label>
    <referenceTo>PF_Epic__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>