test/main/default/objects/copado__User_Story__c/fields/Developer_Tasks_Competed__c.field-meta.xml
<CustomField>
    <fullName>Developer_Tasks_Competed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tasks Competed</label>
    <type>Checkbox</type>
</CustomField>