test/main/default/objects/copado__User_Story__c/fields/Environment_Name__c.field-meta.xml
<CustomField>
    <fullName>Environment_Name__c</fullName>
    <formula>copado__Environment__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Environment Name</label>
    <type>Text</type>
</CustomField>