test/main/default/objects/copado__User_Story__c/fields/Implementation_Approach__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Approach__c</fullName>
    <label>Implementation Approach</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>