test/main/default/objects/copado__User_Story__c/fields/pForce_Story__c.field-meta.xml
<CustomField>
    <fullName>pForce_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>pForce Story</label>
    <referenceTo>PF_Stories__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>