test/main/default/objects/copado__User_Story__c/fields/Planned_Effort_d__c.field-meta.xml
<CustomField>
    <fullName>Planned_Effort_d__c</fullName>
    <label>Planned Effort (d)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>