test/main/default/objects/copado__User_Story__c/fields/So_that_formula__c.field-meta.xml
<CustomField>
    <fullName>So_that_formula__c</fullName>
    <formula>Customer_Journey__r.So_that__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journey End</label>
    <type>Text</type>
</CustomField>