test/main/default/objects/copado__User_Story__c/fields/Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Story_Points__c</fullName>
    <formula>text(Customer_Journey__r.Implementation_Size__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Journey Implementation Size</label>
    <type>Text</type>
</CustomField>