test/main/default/objects/copado__User_Story__c/fields/Tests_Completed__c.field-meta.xml
<CustomField>
    <fullName>Tests_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tests Completed</label>
    <type>Checkbox</type>
</CustomField>