test/main/default/objects/copado__User_Story__c/fields/UAT_Instructions__c.field-meta.xml
<CustomField>
    <fullName>UAT_Instructions__c</fullName>
    <label>UAT Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>