test/main/default/objects/copado__User_Story__c/validationRules/Task_Test_Completion_BeforeUAT.validationRule-meta.xml
<ValidationRule>
    <fullName>Task_Test_Completion_BeforeUAT</fullName>
    <active>true</active>
    <errorConditionFormula>(Developer_Tasks_Competed__c = false || Tests_Completed__c=false)
&amp;&amp;
ISCHANGED(copado__Status__c)
&amp;&amp;
ISPICKVAL(copado__Status__c, &#39;Ready for UAT&#39;)</errorConditionFormula>
    <errorMessage>Please Complete All Tasks and Tests before UAT</errorMessage>
</ValidationRule>