test/main/default/objects/copado__User_Story__c/listViews/Sprint_Planning.listView-meta.xml
<ListView>
    <fullName>Sprint_Planning</fullName>
    <columns>NAME</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>Customer_Journey__c</columns>
    <columns>Ready_for_Sprint__c</columns>
    <columns>Sprint__c</columns>
    <columns>copado__Release__c</columns>
    <columns>copado__Status__c</columns>
    <columns>Planned_Effort_d__c</columns>
    <columns>Effort_d__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ready_for_Sprint__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Sprint__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>copado__User_Story__c.copado__User_Story</value>
    </filters>
    <label>Sprint Planning</label>
</ListView>